	(chess-test-database): More descriptive name.
	(chess-perft): Require as this is our entry-point for testing.
	* doc/chess.texi: Renamed to...
	* chess.texi: Top-level file, keeping doc/ for just one file is useless.
	* Makefile: Adjust and use the predefined MAKEINFO variable from GNU Make.
	* chess-pgn.el (chess-game): Require.
	(chess-pgn-parse): Use `rx'.
	* chess-game.el (chess-pgn): Do not require.
	(chess-game-to-string, chess-game-from-string): Remove, all callers
	updated to use chess-pgn functions directly.

	* chess-algebraic.el (chess-ply-to-algebraic): If TYPE is `:numeric',
	generate ICCF numeric notation.
	(chess-algebraic-regexp, chess-algebraic-to-ply): Optionally allow "0-0"
	and "0-0-0" in addition to "O-O" and "O-O-O" to mean castling.
	(chess-algebraic-regexp, chess-algebraic-to-ply): Handle figurine
	notation.

2014-06-13  Mario Lang  <mlang@delysid.org>

	* chess-pos.el (chess-pos-en-passant, chess-pos-status)
	(chess-pos-side-to-move, chess-pos-annotations)
	(chess-pos-preceding-ply): Enable use as generalized variables.
	(chess-pos-p): New function.

	* chess-ply.el (chess-ply-pos, chess-ply-changes)
	(chess-ply-keyword): Enable use as generalized variables.
	(chess-ply-castling-changes): Convert to using
	`chess-next-index'.

	* chess-polyglot.el (chess-polyglot-pos-to-key): Use logxor to invert
	rank instead of two loops to keep rank/file apart.

2014-06-11  Mario Lang  <mlang@delysid.org>

	* chess-pos.el (chess-ply-castling-changes): Declare.

	* chess-ply.el (chess-piece-name-table): Remove, unused.

	* chess-algebraic.el (chess-algebraic-figurine-pieces): New constant.
	(chess-ply--move-text): Remove and fold into...
	(chess-ply-to-algebraic): ...this function.
	Rename argument LONG to TYPE and additionally allow to
	generate figurine notation.
	* chess-var.el (chess-var-add-ply): Fix docstring.
	(chess-var-to-algebraic): Adjust argument names.
	* doc/chess.texi (Making a move in a variation): Same here.