@@ -8,6 +8,10 @@
 	* Makefile: Adjust and use the predefined MAKEINFO variable from GNU Make.
 	* chess-pgn.el (chess-game): Require.
 	(chess-pgn-parse): Use `rx'.
+	(chess-pgn-mode-map): New variable, split out from...
+	(chess-pgn-mode): Fix autogenerated docstring to include keymap
+	description.
+
 	* chess-game.el (chess-pgn): Do not require.
 	(chess-game-to-string, chess-game-from-string): Remove, all callers
 	updated to use chess-pgn functions directly.
